--- a/dashboard.html
+++ b/dashboard.html
@@ -196,7 +196,7 @@
                         <p class="scroll">Set Profile to Public
                                
                                         <input type="checkbox" name="onoffswitch" class="onoffswitch-checkbox" id="myonoffswitch1" checked>
-                                        <label class="onoffswitch-label" for="myonoffswitch">
+                                        <label class="onoffswitch-label" for="myonoffswitch1">
                                             <span class="onoffswitch-inner"></span>
                                             <span class="onoffswitch-switch"></span>
                                         </label>
